--- a/音乐2.1
+++ b/音乐2.1
@@ -6,7 +6,7 @@ if not player:FindFirstChild("PlayerGui") then player:WaitForChild("PlayerGui") 
 
 local function CreateFullUI()
     local screenGui = Instance.new("ScreenGui")
-    screenGui.Name = "Fovui"..math.random(1000,9999)
+    screenGui.Name = "touchUi "..math.random(1000,9999)
     screenGui.ResetOnSpawn = false
     screenGui.DisplayOrder = 999
     screenGui.Parent = player.PlayerGui
