--- a/音乐2.1
+++ b/音乐2.1
@@ -232,7 +232,13 @@ local function CreateFullUI()
     end
     -- ================= 停止机制修复结束 =================
     
+    -- ================= 修复缓存模式 =================
     local function Mode1_Play(musicID, volume, pitch, loopEnabled)
+        -- 检查缓存的远程事件是否仍然有效
+        if soundSystem.RemoteEvent and not soundSystem.RemoteEvent:IsDescendantOf(game) then
+            soundSystem.RemoteEvent = nil
+        end
+        
         if not soundSystem.RemoteEvent then
             for _, location in ipairs({workspace, replicatedStorage}) do
                 for _, obj in ipairs(location:GetDescendants()) do
@@ -259,10 +265,17 @@ local function CreateFullUI()
             soundSystem.LastSoundName = soundName
             return true
         else
-            soundSystem.RemoteEvent = nil
+            -- 仅在明确错误时重置远程事件
+            if not pcall(function() 
+                -- 发送一个简单的ping测试
+                soundSystem.RemoteEvent:FireServer("ping") 
+            end) then
+                soundSystem.RemoteEvent = nil
+            end
             return false
         end
     end
+    -- ================= 缓存模式修复结束 =================
 
     local function Mode2_Play(musicID, volume, pitch, loopEnabled)
         local soundName = generateSoundName(musicID)
@@ -310,9 +323,14 @@ local function CreateFullUI()
         local volume = math.clamp(tonumber(volumeBox.Text) or 1, 0.1, 100)
         local pitch = math.clamp(tonumber(pitchBox.Text) or 1, 0.1, 100)
         
-        local success = soundSystem.CurrentMode == "mode1" and Mode1_Play(musicID, volume, pitch, soundSystem.LoopEnabled) or
-                       soundSystem.CurrentMode == "mode2" and Mode2_Play(musicID, volume, pitch, soundSystem.LoopEnabled) or
-                       AutoMode_Play(musicID, volume, pitch, soundSystem.LoopEnabled)
+        local success = false
+        if soundSystem.CurrentMode == "mode1" then
+            success = Mode1_Play(musicID, volume, pitch, soundSystem.LoopEnabled)
+        elseif soundSystem.CurrentMode == "mode2" then
+            success = Mode2_Play(musicID, volume, pitch, soundSystem.LoopEnabled)
+        else
+            success = AutoMode_Play(musicID, volume, pitch, soundSystem.LoopEnabled)
+        end
         
         playButton.BackgroundColor3 = success and Color3.fromRGB(70, 170, 70) or Color3.fromRGB(170, 70, 70)
         task.delay(0.1, function() playButton.BackgroundColor3 = Color3.fromRGB(100, 100, 100) end)
@@ -351,8 +369,6 @@ local function CreateFullUI()
     end)
 
     mainFrame.InputEnded:Connect(function() dragActive = false end)
-
-    task.spawn(function() Mode1_Play("0", 0, 1, false) end)
 
     return screenGui
 end
